--- a/datavz/index.html
+++ b/datavz/index.html
@@ -6,6 +6,7 @@
     <article class="about-note">
         <p>The current visual narrative walks a user all popular US names and how popular names appear as a fad, that is a particular
             name may be popular for a while, and then it is overetaken by something more fashionable</p>
+        <p>We have used an interactive slide show approach. User are initally driven though each gender and finally given an oppurtunity to compare All gender data. Keep in mind the slide show is user driven and only progresses on user clicks.</p>
         <p>User is driven through how names evolve over the period per gender through a set of green colored Navigation Buttons
             on the right . Each scene is represented by a button labelled with Gender and finally an All gender button lets
             user explore and compare names between gender in a given period of time. Button labelled Next helps user follow
