--- a/datavz/index.html
+++ b/datavz/index.html
@@ -28,6 +28,7 @@
             </ul>
         </p>
         <p>Also to draw user attention to the most popular name we have used annotations. Most popular data point is made prominent and it shows the popular name in italics</p>
+        <p><strong><em>Point to note is that both charts are independent and dont work together in a coordinated manner. changing filters in one doesnt affect the other</em></strong></p>
         <p>Dataset for the chart has been collected from https://bigquery.cloud.google.com/dataset/bigquery-public-data:usa_names?pli=1
         </p>
         <p>
